# Dio-Projects

./: README.md
Desenvolvendo sua Carteira de Investimentos Inteligente com Rust/: .env.exemplo  Cargo.toml  README.md  docker-compose.yml
Desenvolvendo sua Carteira de Investimentos Inteligente com Rust/estatico/: estilos.css
Desenvolvendo sua Carteira de Investimentos Inteligente com Rust/migrations/: 0001_estrutura.sql
Desenvolvendo sua Carteira de Investimentos Inteligente com Rust/src/: autenticacao.rs  erros.rs  main.rs  modelos.rs  rotas.rs
Desenvolvendo sua Carteira de Investimentos Inteligente com Rust/templates/: autenticacao.html  inicio.html
